examples/lexer/bad/01_unclosed_parentheses.sg
// Ошибка: незакрытые скобки в функции
fn main() -> int {
    let x:int = 42;
    let y:int = 10;
    if (true {
        return x;
    } else {
        return y;
    }
}
